--- a/vcastplay-cms/src/app/components/playlist/playlist-item-content/playlist-item-content.component.html
+++ b/vcastplay-cms/src/app/components/playlist/playlist-item-content/playlist-item-content.component.html
@@ -3,7 +3,7 @@
 
     <div class="absolute top-0 right-0 h-full w-full z-10 bg-gradient-to-t from-[var(--p-primary-500)] to-transparent ">
         <div class="flex items-center justify-center h-full gap-2 hidden bg-gray-300/60" [ngClass]="{ 'group-hover:flex': !onCurrentPlaying()}">
-            @if (!['video', 'audio'].includes(asset.type)) {
+            @if (!['video', 'audio', 'playlist', 'design'].includes(asset.type)) {
                 <p-button severity="info" icon="pi pi-cog" pTooltip="Configuration" 
                     tooltipPosition="bottom" (onClick)="showConfig.set(true); $event.stopPropagation()" size="small" rounded />
             }
@@ -13,19 +13,21 @@
 
     <div class="flex items-center justify-center h-full w-full relative">
         @switch (asset.type) {
-            @case('web') {
-                <app-preview-content class="absolute h-full w-full flex items-center justify-center" 
-                    [currentContent]="asset" [showControls]="false" />
-            } 
-            @default { <img [src]="asset.fileDetails.thumbnail" alt="Content" class="w-full h-full object-contain"> }
+            @case ('design') {
+                <img [src]="asset.thumbnail ?? 'assets/icons/images.png'" [alt]="asset.name" class="w-15 object-contain">
+            }
+            @default {
+                <img [src]="asset.fileDetails.thumbnail" [alt]="asset.name" class="w-full h-full object-contain">
+            }
         }
     </div>
 
-    <div class="absolute bottom-0 left-0 right-0 flex items-center justify-center text-center text-white w-full mb-1 z-50">
+    <div class="absolute bottom-0 left-0 right-0 flex flex-col items-center justify-center text-center text-white w-full mb-1 z-50">
+        <p class="text-sm font-semibold">{{ asset.name }}</p>
         <p class="font-semibold text-sm">{{ utils.timeConversion(asset.duration || 0) }}</p>
     </div>
 
-    <div class="w-[140px] outline-dashed outline-2 outline-offset-2 outline-gray-400" *cdkDragPlaceholder></div>
+    <div class="w-[140px] outline-dashed outline-2 outline-offset-2 outline-gray-400 z-50" *cdkDragPlaceholder></div>
 </div>
 
 <p-dialog [(visible)]="showConfig" [modal]="true" [draggable]="false" [resizable]="false" (onHide)="showConfig.set(false)">
