--- a/vcastplay-cms/src/app/pages/assets/asset-details/asset-details.component.html
+++ b/vcastplay-cms/src/app/pages/assets/asset-details/asset-details.component.html
@@ -140,7 +140,7 @@
                             <p-menu #fileSettings [model]="fileSettingItems" appendTo="body" popup />
                         </div>
                     </div>
-                    <app-preview-content class="absolute h-full w-full flex items-center justify-center bg-stone-800"
+                    <app-preview-assets class="absolute h-full w-full flex items-center justify-center bg-stone-800"
                         [currentContent]="assetForm.value" [showControls]="true" />
                 </ng-container>
             </div>
