--- a/vcastplay-cms/src/app/pages/design-layout/design-layout-list-item/design-layout-list-item.component.html
+++ b/vcastplay-cms/src/app/pages/design-layout/design-layout-list-item/design-layout-list-item.component.html
@@ -2,11 +2,11 @@
     <ng-template #title>
         <div class="flex gap-2 items-center">
             <div class="flex flex-col">
-                <p class="text-sm md:text-lg font-semibold">{{ playlist.name }}</p>
-                <p class="text-xs md:text-sm font-normal line-clamp-1">{{ playlist.description }}</p>
+                <p class="text-sm md:text-lg font-semibold">{{ design.name }}</p>
+                <p class="text-xs md:text-sm font-normal line-clamp-1">{{ design.description }}</p>
             </div>
             <div class="ml-auto">
-                <p-tag [value]="playlist.status.toUpperCase()" [severity]="utils.getStatus(playlist.status)" [icon]="'pi ' + utils.getIcon(playlist.status)" />
+                <p-tag [value]="design.status.toUpperCase()" [severity]="utils.getStatus(design.status)" [icon]="'pi ' + utils.getIcon(design.status)" />
             </div>
         </div>
     </ng-template>
@@ -15,13 +15,13 @@
             <p class="font-semibold">Last Update:</p>
             <div class="flex gap-2 items-center ml-auto">
                 <i class="pi pi-clock" [style]="{ 'font-size': '0.75rem'}"></i>
-                <p class="text-sm italic">{{ utils.onGetLastUpdatedLabel(playlist.updatedOn) }}</p>
+                <p class="text-sm italic">{{ utils.onGetLastUpdatedLabel(design.updatedOn) }}</p>
             </div>
         </div>
     </div>
     <ng-template #footer>
         <div class="flex justify-end gap-2">
-            <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: playlist }"></ng-container>
+            <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: design }"></ng-container>
         </div>
     </ng-template>
 </p-card>
