--- a/vcastplay-cms/src/app/pages/schedules/schedule-details/schedule-details.component.html
+++ b/vcastplay-cms/src/app/pages/schedules/schedule-details/schedule-details.component.html
@@ -89,7 +89,7 @@
     @switch (type?.value) {
         @case('asset') {
             <div class="relative h-100 border-2 border-[var(--p-surface-300)] group bg-stone-800 text-white rounded-lg">
-                <app-preview-content class="absolute h-full w-full flex items-center justify-center"
+                <app-preview-assets class="absolute h-full w-full flex items-center justify-center"
                     [currentContent]="selectedContent()" [showControls]="true" [autoPlay]="false" />
             </div>
         }
