--- a/vcastplay-cms/src/app/components/playlist/playlist-container/playlist-container.component.html
+++ b/vcastplay-cms/src/app/components/playlist/playlist-container/playlist-container.component.html
@@ -1,7 +1,7 @@
 <div class="playlist-container border-2 border-[var(--p-surface-300)] border-dashed p-3">
-    <div class="flex gap-4 h-full" cdkDropList [cdkDropListData]="contents?.value" (cdkDropListDropped)="onDropped($event)" cdkDropListOrientation="horizontal">
+    <div class="flex gap-4 h-full playlist-content-lists" cdkDropList [cdkDropListData]="contents?.value" (cdkDropListDropped)="onDropped($event)" cdkDropListOrientation="horizontal">
         @for (item of contents?.value; track $index) {
-            <app-playlist-item-content cdkDrag [asset]="item" [playlist]="playListForm.value" [cdkDragDisabled]="isPlaying()" />
+            <app-playlist-item-content cdkDrag [asset]="item" [playlist]="playListForm.value" [cdkDragDisabled]="isPlaying()" cdkDragBoundary=".playlist-content-lists" />
         } @empty {
             <div class="flex items-center justify-center h-full absolute top-0 left-0 w-full">
                 <p class="text-gray-400 italic">Drop contents here</p>
