--- a/vcastplay-cms/src/app/components/preview-design-layout/preview-design-layout.component.html
+++ b/vcastplay-cms/src/app/components/preview-design-layout/preview-design-layout.component.html
@@ -1,3 +1,3 @@
-<div class="relative w-full h-full flex justify-center items-center">
-    this is a design layout
+<div class="relative flex items-center justify-center h-full w-full">
+    <canvas #canvas></canvas>
 </div>
