--- a/vcastplay-cms/src/app/pages/design-layout/design-layout-list/design-layout-list.component.html
+++ b/vcastplay-cms/src/app/pages/design-layout/design-layout-list/design-layout-list.component.html
@@ -30,7 +30,7 @@
                     </tr>
                 </ng-template>
                 <ng-template #body let-item>
-                    <tr>
+                    <tr class="text-sm">
                         <td>{{ item.name }}</td>
                         <td>{{ item.description }}</td>
                         <td><p class="text-sm">{{ utils.onGetLastUpdatedLabel(item.updatedOn) }}</p></td>
@@ -44,6 +44,21 @@
                     </tr>
                 </ng-template>
             </p-table>
+            <div class="block lg:hidden flex flex-col gap-4">
+                @if (!loadingSignal()) {
+                    @for (item of filteredDesigns(); track $index) {
+                        <app-design-layout-list-item [design]="item" [actionBtn]="actionBtn" />
+                    } @empty {
+                        <div class="flex justify-center items-center p-5 h-100">
+                            <p>No playlists found</p>
+                        </div>
+                    }
+                } @else {
+                    @for (item of utils.tableSkeletonRows; track $index) {
+                        <p-skeleton height="5rem" />
+                    }
+                }
+            </div>
         </div>
         <ng-template #footer>
             <p-paginator [rows]="rows" [totalRecords]="totalRecords"></p-paginator>
