--- a/vcastplay-cms/src/app/pages/screen-management/screen-controls/screen-controls.component.html
+++ b/vcastplay-cms/src/app/pages/screen-management/screen-controls/screen-controls.component.html
@@ -17,17 +17,9 @@
             </p-inputgroup>
         </div>
     </div>
-    <div class="col-span-1 lg:col-span-6" [ngClass]="{ 'py-5': toggleControls() }">
+    <div class="col-span-1 lg:col-span-6">
         <div class="flex items-center w-full h-full relative">
-            @if (!toggleControls()) { 
-                <p-button class="ml-auto transition-opacity duration-300 ease-in-out" pTooltip="Controls" tooltipPosition="bottom"
-                    icon="pi pi-cog" (onClick)="onClickToggleControls()" /> 
-            }
-            <div class="flex items-center absolute right-0 transition-all duration-300 ease-in-out"
-                [ngClass]="{ 'translate-x-0 opacity-100': toggleControls(), 'translate-x-full opacity-0': !toggleControls() }">
-
-                <p-button class="ml-auto" icon="pi pi-times" severity="danger" (onClick)="onClickToggleControls()" size="small" text />
-                <p-divider layout="vertical"></p-divider>
+            <div class="flex items-center absolute right-0">
                 <div class="flex flex-wrap gap-3 items-center">
                     <p class="text-sm">Controls:</p>
                     <p-button (onClick)="onClickOpenScreen()"
@@ -42,7 +34,6 @@
                         icon="pi pi-megaphone" pTooltip="Broadcast Message" tooltipPosition="bottom" size="small" fluid />
                     <p-button (onClick)="onClickOpenSettings()" 
                         icon="pi pi-cog" pTooltip="Settings" tooltipPosition="bottom" size="small" fluid /> 
-                    <!-- styleClass="!bg-cyan-700 !border-cyan-700 hover:!bg-cyan-600"  -->
                 </div>
             </div>
         </div>
@@ -57,6 +48,3 @@
         <p-button label="Close" severity="secondary" (onClick)="onClickCloseDialog()" />
     </ng-template>
 </p-dialog>
-
-<p-toast />
-<p-confirmdialog />
